GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Automatic_Partner_Points_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Partner_Points_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Partner Points Conversion</label>
    <type>Checkbox</type>
</CustomField>