GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/BalanceBeforeReset__c.field-meta.xml
<CustomField>
    <fullName>BalanceBeforeReset__c</fullName>
    <label>BalanceBeforeReset</label>
    <summarizedField>LoyaltyMemberCurrency.BalanceBeforeReset</summarizedField>
    <summaryForeignKey>LoyaltyMemberCurrency.LoyaltyMemberId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>