GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Data_Fix__c.field-meta.xml
<CustomField>
    <fullName>Data_Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To support data fix</description>
    <inlineHelpText>To support data fix</inlineHelpText>
    <label>Data Fix</label>
    <type>Checkbox</type>
</CustomField>