GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Incremental_Digits__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Digits__c</fullName>
    <description>This field must not be edited as it is used to calculate and assign a membership number to a new member.</description>
    <formula>IF(ISNUMBER(MID(MembershipNumber , 10, 7)), VALUE(MID(MembershipNumber , 10, 7)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field must not be edited as it is used to calculate and assign a membership number to a new member.</inlineHelpText>
    <label>Incremental Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>