GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/IncrementalExtId__c.field-meta.xml
<CustomField>
    <fullName>IncrementalExtId__c</fullName>
    <externalId>true</externalId>
    <label>IncrementalExtId</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>