GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Manual_Tier_Immunity_Level__c.field-meta.xml
<CustomField>
    <fullName>Manual_Tier_Immunity_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It represents the tier in which immunity from downgrade has been applied.</description>
    <inlineHelpText>It represents the tier in which immunity from downgrade has been applied.</inlineHelpText>
    <label>Manual Tier Immunity Level</label>
    <referenceTo>LoyaltyTier</referenceTo>
    <relationshipLabel>Loyalty Program Members</relationshipLabel>
    <relationshipName>Loyalty_Program_Members</relationshipName>
    <type>Lookup</type>
</CustomField>