GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Member_Tier__c.field-meta.xml
<CustomField>
    <fullName>Member_Tier__c</fullName>
    <description>The current program tier the member is at.</description>
    <inlineHelpText>The current program tier the member is at.</inlineHelpText>
    <label>Member Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>