GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/New_Year__c.field-meta.xml
<CustomField>
    <fullName>New_Year__c</fullName>
    <formula>AND(DAY(TODAY()) = 1,
    MONTH(TODAY()) = 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Year</label>
    <type>Checkbox</type>
</CustomField>