GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Number_of_Points_Shared__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Points_Shared__c</fullName>
    <description>This is an auto field that shows the calculated number of points shared/donated to another member of the program.</description>
    <inlineHelpText>This is an auto field that shows the calculated number of points shared/donated to another member of the program.</inlineHelpText>
    <label>Number of Points Shared</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>