GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Number_of_Sharing_Points_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sharing_Points_Received__c</fullName>
    <description>This is an auto field that shows the calculated number of points received from another member of the program.</description>
    <inlineHelpText>This is an auto field that shows the calculated number of points received from another member of the program</inlineHelpText>
    <label>Number of Sharing Points Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>