GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Number_of_Unique_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unique_Members__c</fullName>
    <inlineHelpText>Number of Unique Members that actual Member shared points with</inlineHelpText>
    <label>Number of Unique Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>