GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Opt_Out_From_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_From_Reward_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures a member&#39;s preference not to receive reward points, despite remaining in the program.</description>
    <inlineHelpText>This field captures a member&#39;s preference not to receive reward points, despite remaining in the program.</inlineHelpText>
    <label>Opt Out From Reward Points</label>
    <type>Checkbox</type>
</CustomField>