GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Original_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Enrollment_Date__c</fullName>
    <description>This field stores the Original Enrollment Date for migrated members</description>
    <inlineHelpText>This field stores the Original Enrollment Date for migrated members</inlineHelpText>
    <label>Original Enrollment Date</label>
    <type>Date</type>
</CustomField>