GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/QP__c.field-meta.xml
<CustomField>
    <fullName>QP__c</fullName>
    <description>This field stores the member&#39;s status points which are used to calculate and define the member&#39;s tier level.</description>
    <inlineHelpText>This field stores the member&#39;s status points which are used to calculate and define the member&#39;s tier level.</inlineHelpText>
    <label>Status Points</label>
    <summarizedField>LoyaltyMemberCurrency.Points_Balance_Custom__c</summarizedField>
    <summaryFilterItems>
        <field>LoyaltyMemberCurrency.Name</field>
        <operation>equals</operation>
        <value>Status Points</value>
    </summaryFilterItems>
    <summaryForeignKey>LoyaltyMemberCurrency.LoyaltyMemberId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>