GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Ready_to_Auto_Close__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Auto_Close__c</fullName>
    <formula>AND(TODAY()&gt;= ADDMONTHS(IF(ISNULL(LastActivityDate), EnrollmentDate, LastActivityDate),12 * Program.Loyalty_Account_Closing_in_Years__c),
				TEXT(MemberStatus) != &#39;Inactive&#39;
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready to Auto Close</label>
    <type>Checkbox</type>
</CustomField>