GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Shared_With_Members_Ids__c.field-meta.xml
<CustomField>
    <fullName>Shared_With_Members_Ids__c</fullName>
    <description>This field is auto-populated when points are shared/donated to other members and is used to store the IDs of other members of the program who are receiving points from the current member. A member can share points with up-to-up for other members within the defined program period.</description>
    <inlineHelpText>A member can share a limited value of points with other members within the defined program period</inlineHelpText>
    <label>Shared With Members Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>