GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/Status_Points_To_Next_Tier__c.field-meta.xml
<CustomField>
    <fullName>Status_Points_To_Next_Tier__c</fullName>
    <description>This is an auto-calculated field that displays the minimum required number of points a member needs to move up to the next tier by the next reset period. This field is updated every time a member moves up or down a tier.</description>
    <inlineHelpText>This is an auto-calculated field that displays the minimum required number of points a member needs to move up to the next tier by the next reset period. This field is updated every time a member moves up or down a tier.</inlineHelpText>
    <label>Status Points To Next Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>