GearsetPOC/force-app/main/default/objects/LoyaltyProgramMember/fields/StatusPointsToRemainInTier__c.field-meta.xml
<CustomField>
    <fullName>StatusPointsToRemainInTier__c</fullName>
    <description>This is an auto-calculated field that displays the required number of points a member needs to have to remain in a tier by the next reset period. This field is updated every time a member moves up or down a tier.</description>
    <inlineHelpText>This is an auto-calculated field that displays the required number of points a member needs to have to remain in a tier by the next reset period. This field is updated every time a member moves up or down a tier.</inlineHelpText>
    <label>Status Points To Remain In Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>